fix copyright on mobile

--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 .content {
   grid-area: content;
-  padding: 3rem;
+  margin: 1rem;
 }
 
 a {
